@@ -1,3 +1,8 @@
+Mon Jul 27 13:04:54 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/thgeomag.c,src/thgeomag.cxx: Tweak thgeomag.cxx to be valid C
+	  code.
+
 Mon Jul 27 12:54:19 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/thgeomag.cxx: Fix "set but not used" warning.
